Remove Q_REVISION from "new" PinchHandler signals

They were added in a432970b258edb9ff041d221b2155df30cad4799; however,
although we had the updated() signal being reused as the notifier
for several properties before that, the QML engine provided synthetic
signals matching the naming convention. We had
Q_PROPERTY(qreal scale READ scale NOTIFY updated)
and it was already possible to write onScaleChanged: in QML anyway.
So in that sense, scaleChanged, rotationChanged and translationChanged
are not new, and marking them with Q_REVISION made them unavailable to
QML code that was already using older import versions. We have to avoid
the Q_REVISION to keep QML source compatibility.

Fixes: QTBUG-109637
Pick-to: 6.5
Change-Id: If72b566b1e261d0fec1b1e056eec558f263758c4
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>